# twitter_api

./: .env  Cargo.toml
migrations/2023-09-01-124613_create_tweets/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/api/: add_tweet.rs  get_tweets_by_user.rs
src/api/tweets/: add_tweet.rs  delete_tweet.rs  get_tweets.rs  get_tweets_by_user.rs  update_tweet.rs
src/api/users/: add_user.rs  delete_user.rs  get_users.rs  update_user.rs
src/db/: establish_connection.rs  tweets.rs  users.rs
