[package]
name = "twitter-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
